# conflict-nightlight

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  buf.work.yaml
.github/actions/: build-deploy-go.yml  lint-test-python.yml
.github/workflows/: build-deploy-docker-image.yml  build-deploy-go.yml  build-deploy-react.yml  lint-proto.yml  lint-test-go.yml  lint-test-python.yml  on-pr-main.yml  on-push-main.yml
frontend/: .example_env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  hooks.js  index.js
infra/: acm.tf  cloudfront.tf  cloudwatch.tf  ecr.tf  lambda.tf  main.tf  route53.tf  s3-backend.tfvars  s3.tf  secret-manager.tf  sqs.tf  variables.tf
lambdas/go/: .golangci.yaml  build_dependencies_versions  go.mod  (+2 more)
lambdas/python/: .python-version  Dockerfile  debugger.py  lambda_handler.py  pyproject.toml
lambdas/python/app/: __init__.py
lambdas/python/app/adapters/: eogdata_external_map_repository.py  s3_bounds_repository.py  s3_internal_map_repository.py  struct_logger.py
lambdas/python/app/core/: domain.py  ports.py
lambdas/python/app/core/services/: product.py  raw_processor.py
lambdas/python/app/handlers/: proto_event_handler.py
lambdas/python/app/infrastructure/: extract_lambda_request.py  get_or_raise.py  get_secrets_from_aws_secret_manager.py  proto_transformers.py
lambdas/python/scripts/: entry.sh
lambdas/python/tests/: test_extract_lambda_request.py  test_s3_bounds_repo.py  test_s3_internal_map_repo.py
proto/: buf.gen.go.yaml  buf.gen.python.yaml
scripts/: get-version.sh
(+55 files in other folders)
