[tool.poetry]
name = "map-processor"
version = "0.1.0"
description = ""
authors = ["ericcbonet <ericcbonet@gmail.com>"]
readme = "README.md"
packages = [{include = "python"}]

[tool.poetry.dependencies]
python = "3.10.6"
betterproto = "^1.2.5"
structlog = "^22.3.0"
rasterio = "^1.3.6"
requests = "^2.28.2"
boto3 = "^1.26.98"
geopandas = "^0.12.2"
awslambdaric = "^2.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"
black = "23.1.0"
isort = "5.12.0"
flake8 = "6.0.0"
moto = {extras = ["sqs"], version = "^4.1.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
line_length = 120
